--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@better-scroll/core": "^2.3.1",
+    "@better-scroll/pull-up": "^2.3.1",
     "axios": "^0.21.1",
     "core-js": "^2.6.5",
     "swiper": "^4.2.6",
