--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@better-scroll/core": "^2.3.1",
     "@better-scroll/pull-up": "^2.3.1",
     "axios": "^0.21.1",
+    "better-scroll": "^1.15.2",
     "core-js": "^2.6.5",
+    "moment": "^2.29.1",
     "swiper": "^4.2.6",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
