--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@better-scroll/core": "^2.3.1",
-    "@better-scroll/pull-up": "^2.3.1",
     "axios": "^0.21.1",
     "better-scroll": "^1.15.2",
     "core-js": "^2.6.5",
+    "mint-ui": "^2.2.13",
     "moment": "^2.29.1",
     "swiper": "^4.2.6",
     "vue": "^2.6.10",
